--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "colors": "^1.4.0",
-    "env": "^0.0.2",
+    "dotenv": "^10.0.0",
     "inquirer": "^8.2.0"
   },
   "devDependencies": {},
